Fix: dynamic slot generation and user name display improvements